--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "autoprefixer": "^6.7.6",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
+    "babel-plugin-component": "^0.9.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
@@ -40,12 +41,14 @@
     "vue-loader": "^11.1.3",
     "vue-template-compiler": "^2.2.1",
     "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.1"
+    "webpack-dev-server": "^2.4.1",
+    "url-loader": "^0.5.8"
   },
   "dependencies": {
     "element-ui": "^1.2.5",
     "lodash": "^4.17.4",
-    "url-loader": "^0.5.8",
+    "react-kit": "^0.1.14",
+    "superagent": "^3.5.2",
     "vue": "^2.2.1",
     "vue-router": "^2.3.0",
     "vuex": "^2.2.1"
